# mimir

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml  pytest.ini
.github/workflows/: ci.yaml
contrib/: bootstrap-dev-env.sh
example/: docker-compose.yaml  init-postgres.sh  proxy.Dockerfile  requirements.txt
example/configs/dimensions/: dim_rental_category.yaml
example/configs/metrics/: action_movies_rented.yaml  movies_rented.yaml  rentals_revenue.yaml
example/configs/sources/: sources.yaml
example/secrets/: pagila_postgres.json
example/server/: api.Dockerfile  main.py
src/mimir/: cli.py  shared.py
src/mimir/api/: __init__.py  client.py  connections.py  definitions.py  engine.py  exceptions.py  loaders.py  models.py  types.py
src/mimir/sql/: mimir_sql.py  proxy.py
tests/: conftest.py  test_cli.py  test_client.py  test_e2e.py  test_engine.py  test_integration.py  test_loaders.py  test_mimir_sql.py  test_proxy.py
tests/fixtures/configs/dimensions/: my_dimension.yaml  my_other_dimension.yaml
tests/fixtures/configs/metrics/: my_metric.yaml  stock_level.yaml
tests/fixtures/configs/sources/: duckdb_source.yaml  sources.yaml
tests/fixtures/data/: inventory.csv
tests/fixtures/secrets/: my_connection.json  test_duckdb.json
